Increase memory allocation for application (closes #9)

--- a/templates/user-data.sh.tmpl
+++ b/templates/user-data.sh.tmpl
@@ -55,6 +55,7 @@ sudo docker run \
   --name postgres_loader \
   --restart always \
   --network host \
+  --memory=${container_memory} \
 %{ if cloudwatch_logs_enabled ~}
   --log-driver awslogs \
   --log-opt awslogs-group=${cloudwatch_log_group_name} \
@@ -64,7 +65,7 @@ sudo docker run \
   --log-opt max-file=5 \
 %{ endif ~}
   -v $${CONFIG_DIR}:/snowplow/config \
-  -e 'JAVA_OPTS=-Dorg.slf4j.simpleLogger.defaultLogLevel=info' \
+  -e 'JAVA_OPTS=${java_opts}' \
   snowplow/snowplow-postgres-loader:${version} \
   --config /snowplow/config/postgres_loader.json \
   --resolver /snowplow/config/iglu_resolver.json
